correct indence and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,186 +1,173 @@
-body{
-width:375px;
-height:718px;
-background-color:black;
-}
-.container{
-/* Rectangle 44 */
-position: absolute;
-width: 1440px;
-height: 72px;
-left: 0px;
-top: 0px;
-
-background: #3E3C3C;
-}
-.Jhon-Doe{
-    position:absolute;
-    top:8px;
-    left:16px;
+body {
+  width: 375px;
+  height: 718px;
+  background-color: black;
 }
 
-.menu{
- position:relative;
- left:1100px;
- top:10px;
- width:max-content;
+.container {
+  position: absolute;
+  width: 1440px;
+  height: 72px;
+  left: 0px;
+  top: 0px;
+  background: #3e3c3c;
 }
-/*primero en el móvil (mobile first)*/
-nav{
-padding: 1em;
-font-family:Verdana,Geneva,sans-serif;
--webkit-font-smoothing:antialiased;
--moz-osx-font-smoothing:grayscale;
-font-size:10px;
+
+.Jhon-Doe {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+
+.menu {
+  position: relative;
+  left: 1100px;
+  top: 10px;
+  width: max-content;
+}
+
+nav {
+  padding: 1em;
+  font-family: Verdana, Geneva, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 10px;
 }
 nav ul {
-list-style:none;
-padding:0;
-margin:0;
-background:#333;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background: #333;
 }
 nav li a {
-color:white;
-display:block;
-text-decoration:none;
-padding:.5em 1em;
+  color: white;
+  display: block;
+  text-decoration: none;
+  padding: 0.5em 1em;
 }
-nav li a:hover{
-background: #f5880c;
-color:white;
+nav li a:hover {
+  background: #f5880c;
+  color: white;
 }
-/* @media-query */
+
 @media screen and (min-width: 480px) {
-nav ul{
-display:flex;
-}
+  nav ul {
+    display: flex;
+  }
 }
 .bars {
-position:absolute;
-display:none;
-size:10px;
-color:#f5880c;
-left:auto;
-right:0;
-top:13px;
-bottom:95%;
-margin-right:1vh;
-/* Base / 300 - Tertiary */
-border: 0px solid#f5880c;
+  position: absolute;
+  display: none;
+  size: 10px;
+  color: #f5880c;
+  left: auto;
+  right: 0;
+  top: 13px;
+  bottom: 95%;
+  margin-right: 1vh;
+  border: 0px solid#f5880c;
 }
-.content{
-text-align:center;
-flex-direction:column;
-flex-wrap:wrap-reverse;
-/* Primary Text */
-width:550px;
-height:160px;
-font-family:'Crete Round';
-font-style:normal;
-font-weight:400;
-font-size:72px;
-line-height:75px;
-/* or 113% */
-color: #F55800;
-/* Inside auto layout */
-flex: none;
-order: 0;
-flex-grow: 0;
+
+.content {
+  text-align: center;
+  flex-direction: column;
+  flex-wrap: wrap-reverse;
+  width: 550px;
+  height: 160px;
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 72px;
+  line-height: 75px;
+  
+  color: #f55800;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
-.content1{
-text-align:center;
-flex-direction:column-reverse;
-flex-wrap:wrap;
-width:566px;
-height:80px;
-font-family:'Inter';
-font-style:normal;
-font-weight:500;
-font-size:32px;
-line-height:44px;
-/* or 138% */
-display:flex;
-color:#FFFFFF;
+
+.content1 {
+  text-align: center;
+  flex-direction: column-reverse;
+  flex-wrap: wrap;
+  width: 566px;
+  height: 80px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 44px;
+  display: flex;
+  color: #ffffff;
 }
-.content2{
-/* Description */
-text-align:center;
-padding:-50px;
-width:550px;
-height:123px;
-font-family:'Inter';
-font-style:initial;
-font-weight:300;
-font-size:15px;
-line-height:32px;
-color:#F4F5F7;
-/* or 160% */
-/* Neutrals/N20 */
-/* Inside auto layout */
-flex:none;
-order:2;
-flex-grow:0;
+
+.content2 {
+  text-align: center;
+  padding: -50px;
+  width: 550px;
+  height: 123px;
+  font-family: 'Inter';
+  font-style: initial;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 32px;
+  color: #f4f5f7;
+  flex: none;
+  order: 2;
+  flex-grow: 0;
 }
-.content3 a{
-/* LET’S CONNECT */
-width:1vh;
-height:45px;
-/* Body / 2 - Bolder */
-font-family:'Times New Roman',Times,serif;
-font-style:normal;
-font-weight:500;
-font-size:16px;
-line-height:45px;
-margin-left:25px;
-/* identical to box height, or 150% */
-/* Primary/B300 */
-color:#f5880c;
-/* Inside auto layout */
-flex:none;
-order:0;
-flex-grow:0; 
+
+.content3 a {
+  width: 1vh;
+  height: 45px;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 45px;
+  margin-left: 25px;
+  color: #f5880c;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
-.socialmedia{
-gap:10px;
-justify-content:flex-end;
-align-items:stretch;
-top:8.7%;
-left:3.01%;
-right:96.11%;
-size:10px;
-display:flex;
-flex-direction:column;
-margin:auto;
-margin-left:2vh;
-padding:15px;
-position:absolute;
-Width:450px;
-Height:550px;
-bottom:90.92%;
-font-size: 1em; 
-color: #f5880c;
+
+.socialmedia {
+  gap: 10px;
+  justify-content: flex-end;
+  align-items: stretch;
+  top: 8.7%;
+  left: 3.01%;
+  right: 96.11%;
+  size: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  margin-left: 2vh;
+  padding: 15px;
+  position: absolute;
+  width: 450px;
+  height: 550px;
+  bottom: 90.92%;
+  font-size: 1em;
+  color: #f5880c;
 }
+
 i {
-display: inline-block;
-margin-right: 1em;
+  display: inline-block;
+  margin-right: 1em;
 }
-@media(max-width: 600px) {
-.bars { 
-position:absolute;
-display:block;
-size:10px;
-color:#f5880c;
-left:auto;
-right:0;
-top:13px;
-bottom:95%;
-margin-right:1vh;
-/* Base / 300 - Tertiary */
-border:0px solid#f5880c;
+@media (max-width: 600px) {
+  .bars {
+    position: absolute;
+    display: block;
+    size: 10px;
+    color: #f5880c;
+    left: auto;
+    right: 0;
+    top: 13px;
+    bottom: 95%;
+    margin-right: 1vh;
+    border: 0px solid#f5880c;
+  }
 }
-}
-  
-
-
-  
-
